Prevent Hypothesis table date wrapping onto new lines

--- a/src/widget/components/graphs/hypothesis/hypothesis.module.scss
+++ b/src/widget/components/graphs/hypothesis/hypothesis.module.scss
@@ -12,3 +12,7 @@
   margin-right: 0.7em;
   width: 1em;
 }
+
+.hypothesis-table-cell-date {
+  white-space: nowrap;
+}
