--- a/src/widget/components/graphs/list/list.module.scss
+++ b/src/widget/components/graphs/list/list.module.scss
@@ -7,7 +7,7 @@
 }
 
 .list-item {
-  padding: 0.5em 0;
+  padding: 0.25em 0;
   display: list-item;
 
   &:before {
